<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="uz.leeway.android.lib.lollipinx.managers.PinCodeState" />

        <import type="android.view.View" />

        <variable
            name="state"
            type="uz.leeway.android.lib.lollipinx.managers.PinCodeState" />

        <variable
            name="callback"
            type="uz.leeway.android.lib.lollipinx.interfaces.KeyboardCallback" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pin_code_step_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/pin_code_step_create"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:text="Enter Passcode" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/pin_code_step_sub_title"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="We use it to protect your data" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/empty"
                android:minHeight="100dp"
                android:src="@android:drawable/sym_def_app_icon"
                tools:src="@android:drawable/sym_def_app_icon" />

            <uz.leeway.android.lib.lollipinx.views.PinCodeRoundView
                android:id="@+id/pin_code_round_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:minHeight="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{() -> callback.onSignOutClick()}"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/sign_out"
                android:textColor="@color/dark_grey_color"
                android:textSize="16sp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{() -> callback.onButtonClick(1)}"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/button1_large_text"
                    android:textColor="@color/dark_grey_color"
                    android:textSize="@dimen/keyboard_button_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{() -> callback.onButtonClick(2)}"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/button2_large_text"
                    android:textColor="@color/dark_grey_color"
                    android:textSize="@dimen/keyboard_button_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{() -> callback.onButtonClick(3)}"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/button3_large_text"
                    android:textColor="@color/dark_grey_color"
                    android:textSize="@dimen/keyboard_button_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{() -> callback.onButtonClick(4)}"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/button4_large_text"
                    android:textColor="@color/dark_grey_color"
                    android:textSize="@dimen/keyboard_button_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{() -> callback.onButtonClick(5)}"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/button5_large_text"
                    android:textColor="@color/dark_grey_color"
                    android:textSize="@dimen/keyboard_button_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{() -> callback.onButtonClick(6)}"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/button6_large_text"
                    android:textColor="@color/dark_grey_color"
                    android:textSize="@dimen/keyboard_button_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{() -> callback.onButtonClick(7)}"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/button7_large_text"
                    android:textColor="@color/dark_grey_color"
                    android:textSize="@dimen/keyboard_button_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{() -> callback.onButtonClick(8)}"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/button8_large_text"
                    android:textColor="@color/dark_grey_color"
                    android:textSize="@dimen/keyboard_button_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{() -> callback.onButtonClick(9)}"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/button9_large_text"
                    android:textColor="@color/dark_grey_color"
                    android:textSize="@dimen/keyboard_button_text_size" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/empty"
                    android:onClick="@{() -> callback.onBioClick()}"
                    android:src="@drawable/ic_baseline_fingerprint_24"
                    android:tint="@color/dark_grey_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:onClick="@{() -> callback.onButtonClick(0)}"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/button11_large_text"
                    android:textColor="@color/dark_grey_color"
                    android:textSize="@dimen/keyboard_button_text_size" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/empty"
                    android:onClick="@{() -> callback.onClearClick()}"
                    android:src="@drawable/ic_baseline_backspace_24"
                    android:tint="@color/dark_grey_color" />

            </GridLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>